--- a/VKapp/VKapp/View/Base.lproj/Main.storyboard
+++ b/VKapp/VKapp/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QBo-1P-h3p">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dYV-8K-WkS">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
@@ -93,7 +93,7 @@
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="jCH-3d-wCZ">
-                                    <rect key="frame" x="170" y="7.5" width="30" height="29"/>
+                                    <rect key="frame" x="170" y="7.9999999999999982" width="30" height="28.666666666666664"/>
                                     <color key="tintColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="30" id="coO-t1-NEv"/>
@@ -129,7 +129,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Surname" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RI4-z7-YjD">
-                                            <rect key="frame" x="325.5" y="42" width="68.5" height="21"/>
+                                            <rect key="frame" x="325.66666666666669" y="42" width="68.333333333333314" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -236,7 +236,7 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GroupName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="adU-i7-LJg">
-                                            <rect key="frame" x="291.5" y="45" width="92.5" height="30"/>
+                                            <rect key="frame" x="291.66666666666669" y="45" width="92.333333333333314" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="9cc-Ml-d1u"/>
                                             </constraints>
@@ -334,7 +334,7 @@
                                                     </connections>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NewsSource" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qos-GS-drq">
-                                                    <rect key="frame" x="70" y="10" width="96.5" height="21"/>
+                                                    <rect key="frame" x="70" y="10" width="96.666666666666686" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -346,7 +346,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="NewsText" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P4C-NC-edk">
-                                                    <rect key="frame" x="10" y="80" width="394" height="20.5"/>
+                                                    <rect key="frame" x="10" y="80" width="394" height="20.333333333333329"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -375,7 +375,7 @@
                                                     <state key="normal" image="arrowshape.turn.up.right" catalog="system"/>
                                                 </button>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V3Q-VU-jL8">
-                                                    <rect key="frame" x="20" y="110.5" width="374" height="338.5"/>
+                                                    <rect key="frame" x="20" y="110.33333333333334" width="374" height="338.66666666666663"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -459,7 +459,7 @@
                                 <rect key="frame" x="7" y="265" width="400" height="410"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="Gy3-jh-cwn">
-                                <rect key="frame" x="133.5" y="194" width="147" height="31"/>
+                                <rect key="frame" x="133.66666666666666" y="194" width="146.99999999999997" height="31"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3R0-7O-bLt">
                                         <rect key="frame" x="0.0" y="0.0" width="31" height="31"/>
@@ -526,7 +526,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AllGroupName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EfX-yW-bpx">
-                                            <rect key="frame" x="292.5" y="45" width="111.5" height="30"/>
+                                            <rect key="frame" x="292.66666666666669" y="45" width="111.33333333333331" height="30"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -569,10 +569,28 @@
             </objects>
             <point key="canvasLocation" x="2502" y="1663"/>
         </scene>
-        <!--Search View Controller-->
+        <!--Test View-->
+        <scene sceneID="Xot-8X-cXp">
+            <objects>
+                <viewController id="dYV-8K-WkS" customClass="TestView" customModule="VKapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="T5t-Zq-A9d">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Hh1-bt-19B"/>
+                    </view>
+                    <connections>
+                        <segue destination="PGX-4v-PAY" kind="presentation" identifier="animationComplete" id="Riy-oM-5Wq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aun-Jo-tYb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1165" y="764"/>
+        </scene>
+        <!--Swipe Image View Controller-->
         <scene sceneID="nkw-ca-Pou">
             <objects>
-                <viewController id="RYo-lX-d42" customClass="SearchViewController" customModule="VKapp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="RYo-lX-d42" customClass="SwipeImageViewController" customModule="VKapp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yVc-5h-2tD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -621,6 +639,9 @@
             <point key="canvasLocation" x="2501" y="919"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Riy-oM-5Wq"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="1" width="200" height="200"/>
         <image name="arrowshape.turn.up.right" catalog="system" width="128" height="106"/>
